# newFlo

./: .coverage  .gitignore  AI_GATE_GUIDE.md  README.md  config.working33.yaml  config.yaml  data-structure.txt  depl.md  devops.txt  fixes-prompt.txt  merge_csv.py  optimization_20260202_102018.json  optimization_20260202_103710.json  optimize.py  prompt.txt  pyproject.toml  sample_data_loader.py  skills-lock.json
.claude/: CONTEXT.md  settings.local.json
app/: __init__.py  __main__.py  config.py
docs/: README.md  ai-gate.md  architecture.md  backtest.md  configuration.md  data-pipeline.md  devops.html  generate_devops_ui.py  live-trading.md  risk-management.md  strategy.md
flotrader-ui/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json  tailwind.config.js
liveLoad/: trades_20260409.csv  trades_20260412.csv  trades_20260413.csv  trades_20260414.csv  trades_20260415.csv
live_trades/: trades_20260214.csv  trades_20260410.csv  trades_20260411.csv  trades_20260416.csv  trades_20260417.csv  trades_20260418.csv  trades_20260419.csv
model/: ai_gate_model.pkl  ai_gate_regressor.pkl  config.json
scripts/: aggregate_all_data.py  aggregate_orderbook.py  analyze_regime_apr2026.py  audit_april_fees.py  check_atr.py  convert_to_parquet.py  fetch_bybit_klines.py  migrate_trade_store_20260420.py  regression_test.py  train_gate.py  walkforward_eval.py
tests/: __init__.py  test_ai_gate_rules.py  test_backtest_live_parity.py  test_csv_loader.py  test_event_bus.py  test_fixes.py  test_historical_orderbook_schema.py  test_metrics.py  (+7 more)
(+69 files in other folders)
